examples/test/testpolicy14132.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14132
  namespace: namespace295
spec:
  podSelector:
    matchLabels:
      key11: value34
      key18: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value44
          key2: value20
          key26: value6
      podSelector:
        matchLabels:
          key21: value9
